lang.java.statics.test/tests/positive/packages/qualified-reference-to-class-in-other-package.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    public class A {
        public q.B b;
    }

}

[q] {

    [B]
    package q;
    public class B {}

}
