lang.java.statics.test/tests/negative/packages/qualified-reference-to-missing-package.no.javtest
STATIX fail java\.names\.lexical-package-or-type-name.*\"q\"
JAVAC  fail package q does not exist

[p] {

    [A]
    package p;
    public class A {
        public q.B b;
    }

}
